# Firebird-Gauges-Multi

./: .gitignore  GPS_HARDWARE_OPTIONS.docx  GPS_HARDWARE_OPTIONS.md  OTA_SETUP.md  firebird_pod_3d_viewer.html  partitions.csv  sdkconfig
EasyEDA_Netlists/: BoardA_Power_BOM.csv  BoardA_Power_Netlist.csv  BoardB_Sensor_BOM.csv  BoardB_Sensor_Netlist.csv  README.txt
main/: CMakeLists.txt  main.c
main/GPS/: GPS.c  GPS.h
main/LVGL_UI/: display_gauge.c  display_gauge.h  gauge_face_speed.c  gauge_face_speed.h  gauge_screen.c  gauge_screen.h  oil_gauge.c  oil_gauge.h  settings_screen.c  speed_gauge.c  speed_gauge.h  splash_screen.c
main/OTA/: OTA.c  OTA.h  ota_config.h.example  wifi_sta.c  wifi_sta.h
mount/: CALIPER_MEASUREMENTS.md  FireBird 2 Lcd Ws display Cover R2.stl  FireBird 2 Lcd Ws display R2.3mf  FireBird 2 Lcd Ws display R2.stl  Firebird 2 lcd Waveshare display.3mf  Firebird 2 lcd Waveshare display.stl  README.md  Unnamed.FCStd  Unnamed3.FCStd  WAVESHARE_DIMENSION_DRAWING.url  WAVESHARE_WIKI.url  build_pod.py  firebird_gauge_pod.scad  firebird_gauge_podR1.3mf  firebird_gauge_podR1.scad  firebird_gauge_podR1.stl  firebird_pod_back_cover.scad  firebird_pod_back_cover.step  firebird_pod_back_cover.stl
scripts/: serve_firmware.py
